force-app/main/default/objects/Illumina_Services_Project__c/Illumina_Services_Project__c.object-meta.xml
<CustomObject>
    <label>Illumina Services Project</label>
    <nameField>
        <displayFormat>PROJ-{0000000}</displayFormat>
        <label>Illumina Services Project</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Illumina Services Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>