force-app/main/default/objects/Illumina_Services_Project__c/fields/Account_FAS__c.field-meta.xml
<CustomField>
    <fullName>Account_FAS__c</fullName>
    <description>To capture the user with Account FAS </description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account FAS</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Illumina Services Projects (Account FAS)</relationshipLabel>
    <relationshipName>Illumina_Services_Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>