force-app/main/default/objects/Illumina_Services_Project__c/fields/Amplicons_Probes_in_Rd1__c.field-meta.xml
<CustomField>
    <fullName>Amplicons_Probes_in_Rd1__c</fullName>
    <description>Number of amplicons/probes in DesignStudio order</description>
    <label># Amplicons/Probes in Rd1</label>
    <type>TextArea</type>
</CustomField>