force-app/main/default/objects/Illumina_Services_Project__c/fields/Analysis_Platform__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Platform__c</fullName>
    <description>Field to store analysis platform</description>
    <label>Analysis Platform</label>
    <length>80</length>
    <type>Text</type>
</CustomField>