force-app/main/default/objects/Illumina_Services_Project__c/fields/ATD_Mirror_Pool_QC_Dropout__c.field-meta.xml
<CustomField>
    <fullName>ATD_Mirror_Pool_QC_Dropout__c</fullName>
    <description>Additional test data performance metric</description>
    <label>ATD Mirror Pool QC% Dropout</label>
    <type>TextArea</type>
</CustomField>