force-app/main/default/objects/Illumina_Services_Project__c/fields/ATD_QC_Uniformity__c.field-meta.xml
<CustomField>
    <fullName>ATD_QC_Uniformity__c</fullName>
    <description>Additional test data performance metric</description>
    <label>ATD QC Uniformity</label>
    <type>TextArea</type>
</CustomField>