force-app/main/default/objects/Illumina_Services_Project__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Open text field for notes that cannot be captured in other fields.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>