force-app/main/default/objects/Illumina_Services_Project__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main customer contact for project</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Illumina Services Projects</relationshipLabel>
    <relationshipName>Illumina_Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>