force-app/main/default/objects/Illumina_Services_Project__c/fields/Customer_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Address__c</fullName>
    <description>Deliverable destination</description>
    <label>Customer Shipping Address</label>
    <type>TextArea</type>
</CustomField>