force-app/main/default/objects/Illumina_Services_Project__c/fields/Data_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Delivered_Date__c</fullName>
    <description>Field to store Data delivered Date</description>
    <label>Data Delivered Date</label>
    <type>Date</type>
</CustomField>