force-app/main/default/objects/Illumina_Services_Project__c/fields/Description_of_Additional_Testing__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Additional_Testing__c</fullName>
    <description>To track details of additional testing. Manually filled.</description>
    <label>Description of Additional Testing</label>
    <type>TextArea</type>
</CustomField>