force-app/main/default/objects/Illumina_Services_Project__c/fields/Design_Expert_Name__c.field-meta.xml
<CustomField>
    <fullName>Design_Expert_Name__c</fullName>
    <description>This is field is used to capture full name of design expert which is used in flow email templates.</description>
    <formula>Design_Expert__r.FirstName  &amp;&apos; &apos; &amp;  Design_Expert__r.LastName</formula>
    <label>Design Expert Name</label>
    <type>Text</type>
</CustomField>