force-app/main/default/objects/Illumina_Services_Project__c/fields/Extended_Capabilities_Other__c.field-meta.xml
<CustomField>
    <fullName>Extended_Capabilities_Other__c</fullName>
    <description>Text field when &quot;Other&quot; is selected for extended capabilities</description>
    <label>Extended Capabilities, Other</label>
    <type>TextArea</type>
</CustomField>