force-app/main/default/objects/Illumina_Services_Project__c/fields/Flag_s_Set_For_Project_s__c.field-meta.xml
<CustomField>
    <fullName>Flag_s_Set_For_Project_s__c</fullName>
    <description>Indicates whether design is flagged as a Concierge project in Design Studio</description>
    <label>Flag(s) Set For Project(s)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>