force-app/main/default/objects/Illumina_Services_Project__c/fields/Genome_Build__c.field-meta.xml
<CustomField>
    <fullName>Genome_Build__c</fullName>
    <description>Specifies Genome Build to be utilized in design</description>
    <label>Genome Build</label>
    <type>TextArea</type>
</CustomField>