force-app/main/default/objects/Illumina_Services_Project__c/fields/Jira_Request_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Jira_Request_Number_s__c</fullName>
    <description>Ticket number for bioinformatics assistance</description>
    <label>Jira Request Number(s)</label>
    <type>TextArea</type>
</CustomField>