force-app/main/default/objects/Illumina_Services_Project__c/fields/Mirror_Pool_Final_QC_Specificity__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Pool_Final_QC_Specificity__c</fullName>
    <description>Final round performance metric</description>
    <label>Mirror Pool Final QC Specificity</label>
    <type>TextArea</type>
</CustomField>