force-app/main/default/objects/Illumina_Services_Project__c/fields/Mirror_Pool_PO_Rd3_Oligos__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Pool_PO_Rd3_Oligos__c</fullName>
    <description>Ariba purchase order number for dual strand project</description>
    <label>Mirror Pool PO# Rd3 Oligos</label>
    <type>TextArea</type>
</CustomField>