force-app/main/default/objects/Illumina_Services_Project__c/fields/Mirror_Pool_Rd1_QC_Specificity__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Pool_Rd1_QC_Specificity__c</fullName>
    <description>First round performance metric</description>
    <label>Mirror Pool Rd1 QC Specificity</label>
    <type>TextArea</type>
</CustomField>