force-app/main/default/objects/Illumina_Services_Project__c/fields/No_DesignStudio_Project_ID_why__c.field-meta.xml
<CustomField>
    <fullName>No_DesignStudio_Project_ID_why__c</fullName>
    <description>Explains why there isn&apos;t a design in DesignStudio</description>
    <label>No DesignStudio Project ID, why?</label>
    <type>TextArea</type>
</CustomField>