force-app/main/default/objects/Illumina_Services_Project__c/fields/Number_of_Batches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Batches__c</fullName>
    <description>To capture the number of batches</description>
    <label>Number of Batches</label>
    <summaryForeignKey>Illumina_Service_Batches__c.Illumina_Services__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>