force-app/main/default/objects/Illumina_Services_Project__c/fields/Number_of_Batches_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Batches_Completed__c</fullName>
    <description>To capture the number of completed batches</description>
    <label>Number of Batches Completed</label>
    <summaryFilterItems>
        <field>Illumina_Service_Batches__c.Completion_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Illumina_Service_Batches__c.Illumina_Services__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>