force-app/main/default/objects/Illumina_Services_Project__c/fields/Oligos_used_for_testing__c.field-meta.xml
<CustomField>
    <fullName>Oligos_used_for_testing__c</fullName>
    <description>To describe oligos for testing, needed as oligos can moving forward be purchased from 3rd party vendors</description>
    <label>Oligos used for testing</label>
    <type>TextArea</type>
</CustomField>