force-app/main/default/objects/Illumina_Services_Project__c/fields/Order_Placed__c.field-meta.xml
<CustomField>
    <fullName>Order_Placed__c</fullName>
    <description>Timestamp when project status is changed to &quot;Product Order Placed&quot;</description>
    <label>Order Placed</label>
    <type>Date</type>
</CustomField>