force-app/main/default/objects/Illumina_Services_Project__c/fields/Original_DS_Design_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Original_DS_Design_Coverage__c</fullName>
    <description>% Coverage of original design in DesignStudio</description>
    <label>Original DS Design Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>