force-app/main/default/objects/Illumina_Services_Project__c/fields/P3_Contracted_Units__c.field-meta.xml
<CustomField>
    <fullName>P3_Contracted_Units__c</fullName>
    <description>Number of units of Unique Part Number from contract</description>
    <label>P3 - Contracted Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>