force-app/main/default/objects/Illumina_Services_Project__c/fields/P3_of_Units_Consumed__c.field-meta.xml
<CustomField>
    <fullName>P3_of_Units_Consumed__c</fullName>
    <description>Number of consumed units of Unique Part Number in that batch submission</description>
    <label>P3 - # of Units Consumed</label>
    <summarizedField>Illumina_Service_Batches__c.P3_of_Units_Consumed__c</summarizedField>
    <summaryForeignKey>Illumina_Service_Batches__c.Illumina_Services__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>