force-app/main/default/objects/Illumina_Services_Project__c/fields/P4_Cancelled_Units__c.field-meta.xml
<CustomField>
    <fullName>P4_Cancelled_Units__c</fullName>
    <description>Number of cancelled units of Unique Part Number from contract</description>
    <label>P4 - Cancelled Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>