force-app/main/default/objects/Illumina_Services_Project__c/fields/P4_Code__c.field-meta.xml
<CustomField>
    <fullName>P4_Code__c</fullName>
    <description>Unique Part Number from contract</description>
    <formula>P4_Product_1__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P4 - Code</label>
    <type>Text</type>
</CustomField>