force-app/main/default/objects/Illumina_Services_Project__c/fields/Padding_around_Exons__c.field-meta.xml
<CustomField>
    <fullName>Padding_around_Exons__c</fullName>
    <description>Specifies number of bases around each exon to be included in design region</description>
    <label>Padding around Exons</label>
    <type>TextArea</type>
</CustomField>