force-app/main/default/objects/Illumina_Services_Project__c/fields/PO_Rd2_Oligos__c.field-meta.xml
<CustomField>
    <fullName>PO_Rd2_Oligos__c</fullName>
    <description>Ariba purchase order number</description>
    <label>PO# Rd2 Oligos</label>
    <type>TextArea</type>
</CustomField>