force-app/main/default/objects/Illumina_Services_Project__c/fields/Product_Application__c.field-meta.xml
<CustomField>
    <fullName>Product_Application__c</fullName>
    <description>Indicates application for: Agriculture, Complex Disease, Consumer Genomics, Genetic Disease, Metagenomics/Microbiology, NIPT, Oncologu, Reproductive Health, or Other</description>
    <label>Product Application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agrigenomics</fullName>
            </value>
            <value>
                <fullName>Complex Disease</fullName>
            </value>
            <value>
                <fullName>Consumer Genomics</fullName>
            </value>
            <value>
                <fullName>Genetic Disease</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Microbiology</fullName>
            </value>
            <value>
                <fullName>NIPT</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Reproductive Health</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>