force-app/main/default/objects/Illumina_Services_Project__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Panel name in DesignStudio</description>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>