force-app/main/default/objects/Illumina_Services_Project__c/fields/Project_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Close_Date__c</fullName>
    <description>&quot;Timestamp when project status is changed to &quot;&quot;Closed- Delivered&quot;&quot;
&quot;</description>
    <label>Project Close Date</label>
    <type>Date</type>
</CustomField>