force-app/main/default/objects/Illumina_Services_Project__c/fields/Project_Comments__c.field-meta.xml
<CustomField>
    <fullName>Project_Comments__c</fullName>
    <description>History of timestamped comments.</description>
    <label>Project Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>