force-app/main/default/objects/Illumina_Services_Project__c/fields/Project_Weight__c.field-meta.xml
<CustomField>
    <fullName>Project_Weight__c</fullName>
    <description>Field to calculate Project Weight</description>
    <formula>VALUE(TEXT(Visibility__c)) + VALUE(TEXT(Difficulty__c)) + VALUE(TEXT(Size__c)) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>