force-app/main/default/objects/Illumina_Services_Project__c/fields/Rd1_QC_Uniformity__c.field-meta.xml
<CustomField>
    <fullName>Rd1_QC_Uniformity__c</fullName>
    <description>First round performance metric</description>
    <label>Rd1 QC Uniformity</label>
    <type>TextArea</type>
</CustomField>