force-app/main/default/objects/Illumina_Services_Project__c/fields/Reason_for_requesting_Concierge_Support__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_requesting_Concierge_Support__c</fullName>
    <description>Business need and problem to be addressed</description>
    <label>Reason for requesting Concierge Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>