force-app/main/default/objects/Illumina_Services_Project__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <description>Field to map Requestor's Email</description>
    <formula>Requestor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Email</label>
    <type>Text</type>
</CustomField>