force-app/main/default/objects/Illumina_Services_Project__c/fields/Sample_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type_Other__c</fullName>
    <description>Text field when &quot;Other&quot; is selected for sample type</description>
    <label>Sample Type - Other</label>
    <type>TextArea</type>
</CustomField>