force-app/main/default/objects/Illumina_Services_Project__c/fields/Samples_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Samples_Received_Date__c</fullName>
    <description>Timestamp when project status is changed to &quot;Samples and Kits Received&quot;</description>
    <label>Samples Received Date</label>
    <type>Date</type>
</CustomField>