force-app/main/default/objects/Illumina_Services_Project__c/fields/Sequencing_Consumables_Requirements_PoC__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Consumables_Requirements_PoC__c</fullName>
    <description>To capture the Consumables requirement for PoC</description>
    <label>Sequencing Consumables Requirements(PoC)</label>
    <type>TextArea</type>
</CustomField>