force-app/main/default/objects/Illumina_Services_Project__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <description>To capture the service level</description>
    <label>Service Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>