force-app/main/default/objects/Illumina_Services_Project__c/fields/Species_Other__c.field-meta.xml
<CustomField>
    <fullName>Species_Other__c</fullName>
    <description>For business</description>
    <label>Species -Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>