force-app/main/default/objects/Illumina_Services_Project__c/fields/T_O_Services_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>T_O_Services_Sales_Order_Number__c</fullName>
    <description>Assigned testing &amp; optimization services Sales Order Number</description>
    <label>T&amp;O Services Sales Order Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>