force-app/main/default/objects/Illumina_Services_Project__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>To capture the territory region</description>
    <formula>Account_Name__r.Territory_Name__c +if(Account_Name__r.Territory_Name__c  != null &amp;&amp; Account_Name__r.Territory_Region__c != null, &apos;/&apos;, &apos;&apos; )+ Account_Name__r.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory / Region</label>
    <type>Text</type>
</CustomField>