force-app/main/default/objects/Illumina_Services_Project__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>To capture the visibility of service project</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>