force-app/main/default/objects/Illumina_Services_Project__c/recordTypes/CGLS.recordType-meta.xml
<RecordType>
    <fullName>CGLS</fullName>
    <active>true</active>
    <label>CGLS</label>
</RecordType>