force-app/main/default/objects/Illumina_Services_Project__c/recordTypes/Infinium_Design_Services.recordType-meta.xml
<RecordType>
    <fullName>Infinium_Design_Services</fullName>
    <active>true</active>
    <label>Infinium Design Services</label>
</RecordType>