force-app/main/default/objects/Illumina_Services_Project__c/recordTypes/Sequencing_Design_Services.recordType-meta.xml
<RecordType>
    <fullName>Sequencing_Design_Services</fullName>
    <active>true</active>
    <label>Sequencing Design Services</label>
</RecordType>