force-app/main/default/objects/Illumina_Services_Project__c/recordTypes/Wetlab_Testing_Optimization.recordType-meta.xml
<RecordType>
    <fullName>Wetlab_Testing_Optimization</fullName>
    <active>true</active>
    <label>Wetlab Testing &amp; Optimization</label>
</RecordType>