force-app/main/default/objects/Illumina_Services_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>