force-app/main/default/objects/Illumina_Services_Project__c/listViews/FTS.listView-meta.xml
<ListView>
    <fullName>FTS</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Illumina_Services_Project__c.CGLS</value>
    </filters>
    <label>FTS</label>
    <language>en_US</language>
</ListView>